bpo-43105: importlib now loads dynamic modules using full paths